Fixes bug 73029 "new cache time problems, reload sometimes broken" r=disttsc@bart.nl,gagan sr=mscott