netwerk/protocol/http/src/nsHTTPChannel.h
@@ -141,11 +141,6 @@ protected:
     nsresult            OpenCacheEntry();
     nsresult            GenerateCacheKey(nsAWritableCString &);
 
-    nsresult            GetRequestTime(PRUint32 *);
-    nsresult            SetRequestTime(PRUint32);
-    nsresult            GetResponseTime(PRUint32 *);
-    nsresult            SetResponseTime(PRUint32);
-
     nsresult            ComputeCurrentAge(PRUint32 now, PRUint32 *);
     nsresult            ComputeFreshnessLifetime(PRUint32 *);
     nsresult            UpdateExpirationTime();
@@ -221,6 +216,7 @@ protected:
     nsCOMPtr<nsIRequest>                mCacheReadRequest;
     nsCacheAccessMode                   mCacheAccess;
     PRUint32                            mPostID;
+    PRUint32                            mRequestTime;
 #else
     nsCOMPtr<nsICachedNetData>          mCacheEntry;
     nsCOMPtr<nsIChannel>                mCacheChannel;
